# MSS

./: .gitignore  CHANGES.rst  README.md  conftest.py  pixi.toml  pyproject.toml  setup.py
.github/workflows/: update-pixi-lockfile.yml
docs/: components.rst  conf.py  development.rst  gentutorials.rst  installation.rst  mscolab.rst  mswms.rst  usage.rst
docs/samples/automation/: retriever.py
docs/samples/plugins/: navaid.rst
mslib/: version.py
mslib/mscolab/: conf.py  file_manager.py  models.py  mscolab.py  seed.py  server.py  sockets_manager.py  utils.py
mslib/mscolab/app/: __init__.py
mslib/msui/: aircraft.py  autoplot_dockwidget.py  constants.py  editor.py  flighttrack.py  hexagon_dockwidget.py  kmloverlay_dockwidget.py  mpl_map.py  mpl_pathinteractor.py  mpl_qtwidget.py  mscolab.py  msui.py  msui_mainwindow.py  multilayers.py  satellite_dockwidget.py  sideview.py  socket_control.py  topview.py  viewwindows.py  wms_control.py
mslib/mswms/: dataaccess.py  gallery_builder.py  generics.py  mpl_hsec.py  mpl_hsec_styles.py  mpl_lsec.py  mpl_vsec.py  mss_2D_sections.py  mss_plot_driver.py  mswms.py  wms.py
mslib/utils/: __init__.py  netCDF4tools.py  qt.py  time.py
tests/_test_mscolab/: test_sockets_manager.py
tests/_test_msui/: test_mscolab.py
tests/_test_mswms/: test_mswms.py
tests/_test_utils/: test_qt.py  test_time.py
tutorials/: tutorial_hexagoncontrol.py  tutorial_kml.py  tutorial_satellitetrack.py  tutorial_views.py  tutorial_waypoints.py  tutorials.batch
tutorials/utils/: __init__.py  platform_keys.py
